--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,11 +27,14 @@ h1{
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.714); 
     margin-bottom: 20px;
 }
-li{ 
-    list-style: none;
 
+li{
+    list-style: none;
+}a{
+    text-decoration: none;
 }
-.logos {
+
+.logos { 
     height: 15vh;
     width: 15vh;
     border-radius: 1px;
@@ -40,24 +43,32 @@ li{
     height: 5vh;
     width: 5vh;
 }
-.creadores{
+/*.creadores{
     height: 30vh;
     width: 50vh;
     border-radius: 5px;
-}
+    object-fit: cover;
+}*/
 .subtitulos{
     text-align: center;
 }
 .redes{
-text-align: end;
+    text-align: end;
+    margin-right: 5px;
 }
 .derechos{
     text-align: end;
     margin-right: 30px;
     font-size: 20px;
+    padding-top: 150px;
+    /*padding: 15px;
+    margin-right: 5px;*/
 }
 .patrocinados{
     text-align: center;
+}
+.patro{
+    object-fit: cover;
 }
 .creadores{
     height: 40vh;
@@ -65,6 +76,7 @@ text-align: end;
     display: flex;
     flex-direction:column;
     align-items:center;
+    object-fit: cover;
 }
 
 .tiendazapas{
@@ -92,7 +104,8 @@ li {
     list-style: none; 
     margin: 0;         
     padding: 0;        
-    gap: 30px;          /
+    gap: 30px; 
+    list-style: none;         
 }
 
 .main {
@@ -103,7 +116,6 @@ li {
     min-height: 50vh; 
     width: 100%;
     padding: 20px 0;
-
 }
 
 /* Estilos específicos para el carrusel */
@@ -143,6 +155,8 @@ section.productos {
     width: 100%;
     max-width: 1200px;
 }
+
+
 
 /*contacto*/
 form{
@@ -198,7 +212,7 @@ form{
     }
 
     /* Subtítulos y Párrafos */
-    .subtitulos h2 {
+    .subtitulos {
         font-size: 1.8em; 
         margin-top: 15px;
         margin-bottom: 10px;
